Finalizado o cadastro de usuarios no Firebase.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".Activity.LoginActivity" />
-        <activity android:name=".Activity.InicialActivity"></activity>
+        <activity android:name=".Activity.InicialActivity" />
+        <activity android:name=".Activity.CadastroActivity"></activity>
     </application>
 
 </manifest>
